tests/errmsgs/t8064.nim
discard """
  errormsg: "expression has no type: values"
"""
import tables

values